--- a/public/index.html
+++ b/public/index.html
@@ -447,7 +447,7 @@
         // Change this to your production backend URL (e.g., https://menbar-api.onrender.com)
         const BASE_API_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
             ? 'http://localhost:8000'
-            : 'https://menbar-site.onrender.com'; // Your Render backend URL
+            : 'https://menjaw.onrender.com'; // Your Render backend URL
 
         // --- Global Error Handler ---
         window.onerror = function (msg, url, line, col, error) {
