--- a/public/index.html
+++ b/public/index.html
@@ -247,6 +247,24 @@
             }
         }
 
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                opacity: 0.8;
+            }
+
+            50% {
+                transform: scale(1.1);
+                opacity: 1;
+                filter: drop-shadow(0 0 15px var(--primary));
+            }
+
+            100% {
+                transform: scale(1);
+                opacity: 0.8;
+            }
+        }
+
         .animate-fade-in {
             animation: fadeIn 0.6s ease-out forwards;
         }
@@ -2924,13 +2942,29 @@
                     )}
 
                     {status === 'processing' && (
-                        <div style={{ width: '100%' }}>
-                            <h3>جاري المونتاج السحابي...</h3>
-                            <div style={{ width: '100%', height: '12px', background: 'var(--surface)', borderRadius: '6px', margin: '20px 0', overflow: 'hidden', border: '1px solid var(--border)' }}>
-                                <div style={{ width: `${progress}%`, height: '100%', background: 'var(--primary)', transition: '0.5s' }} />
+                        <div style={{ width: '100%', textAlign: 'center', padding: '40px 0' }}>
+                            <div className="animate-pulse" style={{ fontSize: '5rem', marginBottom: '30px' }}>🤖</div>
+                            <h3 style={{ marginBottom: '10px' }}>جاري العمل في مختبرات مِـنـبَـر...</h3>
+                            <p style={{ color: 'var(--text-secondary)', marginBottom: '10px', minHeight: '1.5em' }}>
+                                {progress < 30 ? "يتم الآن رفع الملفات للسحاب بآمان..." :
+                                    progress < 50 ? "الذكاء الاصطناعي يحلل الإيقاع والنبرات الصوتية..." :
+                                        progress < 80 ? "جاري المطابقة الزمنية الدقيقة (هذه المرحلة تأخذ وقتاً لضمان الدقة)..." :
+                                            progress < 95 ? "يتم الآن توزيع الكاميرات وبناء شريط الزمن (Timeline)..." :
+                                                "ثواني معدودة ويصبح مشروعك جاهزاً..."}
+                            </p>
+                            <p style={{ color: 'var(--text-secondary)', fontSize: '0.85rem', marginBottom: '30px', opacity: 0.7 }}>
+                                ⚠️ قد تستغرق هذه العملية ما يصل إلى 20 دقيقة بناءً على حجم الملفات، يرجى عدم إغلاق الصفحة.
+                            </p>
+
+                            <div style={{ width: '100%', maxWidth: '600px', margin: '0 auto' }}>
+                                <div style={{ width: '100%', height: '12px', background: 'var(--surface)', borderRadius: '6px', margin: '20px 0', overflow: 'hidden', border: '1px solid var(--border)' }}>
+                                    <div style={{ width: `${progress}%`, height: '100%', background: 'linear-gradient(90deg, var(--primary-dim), var(--primary))', transition: '0.5s', borderRadius: '6px' }} />
+                                </div>
+                                <div style={{ fontSize: '1.5rem', color: 'var(--primary)', fontWeight: 'bold', marginBottom: '10px' }}>{progress}%</div>
+                                <div className="badge" style={{ background: 'rgba(0, 74, 173, 0.1)', color: 'var(--primary)', border: '1px solid var(--primary-dim)' }}>
+                                    {log || "تهيئة النظام السحابي..."}
+                                </div>
                             </div>
-                            <div style={{ color: 'var(--primary)', fontWeight: 'bold' }}>{progress}%</div>
-                            <p style={{ marginTop: '10px' }}>{log}</p>
                         </div>
                     )}
 
