--- a/public/index.html
+++ b/public/index.html
@@ -2025,8 +2025,8 @@
             const [countdown, setCountdown] = useState(null);
 
             const models = useMemo(() => [
-                { id: 'gemini-imagen-3', type: 'image', name: 'Gemini Imagen 3', cost: 3, icon: '💎', desc: t('model_gemini_desc') },
-                { id: 'gemini-imagen-3-pro', type: 'image', name: 'Gemini Imagen 3 Pro', cost: 4, icon: '🌟', desc: t('model_gemini_pro_desc') }
+                { id: 'nano banana', type: 'image', name: 'nano banana', cost: 3, icon: '🍌', desc: t('model_gemini_desc') },
+                { id: 'nano banana pro', type: 'image', name: 'nano banana pro', cost: 4, icon: '🍌✨', desc: t('model_gemini_pro_desc') }
             ], [t]);
 
             useEffect(() => {
@@ -2779,11 +2779,27 @@
 
                     // 4. Polling
                     let jobStatus = 'PENDING';
-                    while (jobStatus !== 'SUCCESS' && jobStatus !== 'completed') {
+                    while (jobStatus !== 'SUCCESS' && jobStatus !== 'completed' && jobStatus !== 'failed') {
                         await new Promise(r => setTimeout(r, 2000));
                         const statusRes = await fetch(`${BASE_API_URL}/status/${job_id}`);
                         const statusData = await statusRes.json();
                         jobStatus = statusData.status;
+
+                        // Update UI with backend progress
+                        if (statusData.progress) {
+                            // Map backend (0-100) to UI (70-100) scale
+                            const backendProgress = statusData.progress;
+                            const uiProgress = 70 + (backendProgress * 0.3);
+                            setProgress(Math.floor(uiProgress));
+
+                            if (statusData.status === 'processing') {
+                                setLog(statusData.result?.message || "الذكاء الاصطناعي يقوم بالتحليل النهائي...");
+                            }
+                        }
+
+                        if (jobStatus === 'failed') {
+                            throw new Error(statusData.result?.error || "فشلت عملية المونتاج");
+                        }
 
                         if (jobStatus === 'SUCCESS' || jobStatus === 'completed') {
                             setResultUrl(`${BASE_API_URL}${statusData.result.output_url}`);
@@ -2826,7 +2842,6 @@
                                     onMouseEnter={(e) => e.currentTarget.style.borderColor = 'var(--primary)'}
                                     onMouseLeave={(e) => e.currentTarget.style.borderColor = 'transparent'}
                                 >
-                                    <div style={{ fontSize: '3.5rem', marginBottom: '15px' }}>🏛️</div>
                                     <h3>مونتاج داخلي</h3>
                                     <p style={{ fontSize: '0.9rem', color: 'var(--text-secondary)' }}>تبديلات سريعة، تركيز على المشاعر واللقطات القريبة</p>
                                 </div>
@@ -2837,7 +2852,6 @@
                                     onMouseEnter={(e) => e.currentTarget.style.borderColor = 'var(--primary)'}
                                     onMouseLeave={(e) => e.currentTarget.style.borderColor = 'transparent'}
                                 >
-                                    <div style={{ fontSize: '3.5rem', marginBottom: '15px' }}>🏜️</div>
                                     <h3>مونتاج خارجي</h3>
                                     <p style={{ fontSize: '0.9rem', color: 'var(--text-secondary)' }}>لقطات أوسع، هدوء في الانتقالات، مناسب للمجالس الكبيرة</p>
                                 </div>
@@ -2953,7 +2967,7 @@
                                                 "ثواني معدودة ويصبح مشروعك جاهزاً..."}
                             </p>
                             <p style={{ color: 'var(--text-secondary)', fontSize: '0.85rem', marginBottom: '30px', opacity: 0.7 }}>
-                                ⚠️ قد تستغرق هذه العملية ما يصل إلى 20 دقيقة بناءً على حجم الملفات، يرجى عدم إغلاق الصفحة.
+                                ⚠️ قد تستغرق هذه العملية ما يصل إلى ساعة كاملة بناءً على حجم الملفات، يرجى عدم إغلاق الصفحة.
                             </p>
 
                             <div style={{ width: '100%', maxWidth: '600px', margin: '0 auto' }}>
