--- a/index.html
+++ b/index.html
@@ -498,7 +498,11 @@
       const div = document.createElement('div'); div.style.padding='8px'; div.style.borderBottom='1px solid rgba(255,255,255,0.03)';
       const canCancel = (function(){ const dt = new Date(`${r.date}T${r.time}:00`); return dt.getTime() > Date.now(); })();
       div.innerHTML = `<div style="font-weight:700">${r.date} ${r.time} · ${r.duration} د</div><div style="opacity:0.9">${r.name} — ${r.phone}</div>`;
+      // زر الإلغاء إذا كان مسموحًا
       if(canCancel){ const b = document.createElement('button'); b.textContent='إلغاء'; b.style.marginTop='6px'; b.onclick = async ()=>{ if(!confirm('هل تريد إلغاء هذا الحجز؟'))return; const res = await fetch('/api/bookings/'+r.id+'/cancel',{method:'POST',headers:{'content-type':'application/json'},body:JSON.stringify({phone:document.getElementById('myCountryCode').value + document.getElementById('myPhone').value.replace(/\D/g,'')})}); const data = await res.json(); if(res.ok){ alert('تم الإلغاء'); loadMyBookings(); renderDays(currentDate); renderSlots(); } else alert('فشل: '+(data.error||'غير متوقع')); }; div.appendChild(b); }
+      // زر الدفع — يظهر لكل حجز لفتح نافذة الدفع
+      const payBtn = document.createElement('button'); payBtn.textContent='دفع'; payBtn.style.marginTop='6px'; payBtn.style.marginLeft='8px'; payBtn.style.background='#1a73e8'; payBtn.style.color='#fff'; payBtn.onclick = ()=>{ showPaymentModal(); };
+      div.appendChild(payBtn);
       container.appendChild(div);
     });
   }
